# advent-of-code

./: .gitignore
2019/elm/src/: Day01.elm  Day02.elm
2019/elm/tests/Tests/: Day03.elm
2020/clojure/: README.md  deps.edn
2020/clojure/src/aoc/: core.clj  day_01.clj  day_02.clj  day_03.clj  day_04.clj  day_05.clj  day_06.clj  day_07.clj  util.clj
2020/haskell/: advent-of-code.cabal
2020/haskell/AdventOfCode/: Day01.hs
2022/elisp/: day-01.el  day-02.el  helpers.el
2022/javascript/: day-01.js
src/: Day01.elm  Day02.elm  Day03.elm  First.elm
tests/Tests/: Day01.elm  Day02.elm
