cabal-version:       >=1.10
name:                advent-of-code
version:             0.1.0.0
author:              Martin Liberg
maintainer:          martin.liberg@hey.com
build-type:          Simple

executable advent-of-code
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
                     , containers >=0.6.4.1
  default-language:    Haskell2010
